[package]
name = "luadot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
gix = { version = "0.84.0", features = ["blocking-network-client", "blocking-http-transport-reqwest-rust-tls"] }
mlua = { version = "0.11.6", features = ["lua54", "vendored", "send"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3.27.0"

[lints.clippy]
needless_return = "allow"
